# watermarkai

./: .gitignore  AGENTS.md  AWS_DEPLOYMENT_STATUS.md  Caddyfile  DEPLOYMENT_AWS_EC2.md  Dockerfile  LICENSE-NOTE.md  PROGRESS.md  README.md  UP  docker-compose.prod.yml  docker-compose.worker.yml  docker-compose.yml  dump.rdb  provision_aws.py  start-local.bat  start-local1.bat
backend/: .env.example  .env.production  AGENTS.md  BACKEND_DETAILS.md  Dockerfile  PROJECT_UPDATE.md  fix_emails.py  pyproject.toml
backend/app/: main.py  seed.py
backend/app/api/: admin.py  auth.py  detection.py  files.py  health.py  masks.py  payments.py  preview.py  processing.py  projects.py  uploads.py
backend/app/auth/: dependencies.py
backend/app/core/: config.py  db.py  error_handlers.py  errors.py  google_oauth.py  maintenance.py  security.py  tokens.py
backend/app/models/: __init__.py
backend/app/repositories/: admin.py  candidates.py  processing.py  uploads.py
backend/migrations/: env.py
backend/tests/: conftest.py  test_admin_integration.py  test_admin_panel_phase2.py  test_admin_panel_phase3.py  test_admin_panel_phase4.py  test_admin_panel_phase5.py  test_admin_panel_phase6.py  test_admin_panel_phase7.py  test_admin_phase8.py  test_admin_rbac.py  test_detection_phase7.py  test_e2e_phase9.py  test_email_phase10.py  test_google_auth.py  test_health_monitor.py  test_integration_phase9.py  test_masks_phase4.py  test_preview_phase6.py  test_processing_phase5.py  test_projects_regressions.py  test_security.py  test_units_phase9.py  test_uploads_phase3.py
scripts/: deploy.sh  (+7 more)
(+393 files in other folders)
