[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vwa-backend"
version = "0.1.0"
description = "AI Video Watermark Detection & Removal System — FastAPI backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.6",
    "pydantic-settings>=2.1",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.1",
    "alembic",
    "argon2-cffi>=23.1",
    "python-jose[cryptography]>=3.3",
    "email-validator>=2.1",
    "celery[redis]>=5.3",
    "redis>=5.0",
    "boto3>=1.34",
    "minio>=7.2",
    "ffmpeg-python>=0.2",
    "opencv-python>=4.9",
    "pillow>=10.2",
    "numpy>=1.26",
    "python-multipart>=0.0.9",
    "slowapi>=0.1.9",
    "httpx>=0.27",
    "ultralytics>=8.1",
    "easyocr>=1.7",
]

[project.optional-dependencies]
paddle = ["paddlepaddle>=2.6", "paddleocr>=2.7"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "pytest-cov>=4.1", "httpx>=0.27", "ruff>=0.3"]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
